<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">카카오 릴레이</string>
    <string name="header_title">카카오톡 릴레이</string>
    <string name="header_subtitle">카카오톡 알림을 웹으로 실시간 전달합니다</string>
    <string name="status_connected">● 연결됨</string>
    <string name="status_disconnected">● 미연결</string>
    <string name="section_server">서버 설정</string>
    <string name="hint_server_url">서버 주소 (예: http://192.168.0.10:4000)</string>
    <string name="label_server_url">서버 주소</string>
    <string name="hint_user_id">유저 ID (웹 사이드바에서 확인)</string>
    <string name="label_user_id">유저 ID</string>
    <string name="btn_save">저장 및 연결</string>
    <string name="section_permission">알림 접근 권한</string>
    <string name="permission_granted">✓ 알림 접근 권한이 허용되었습니다</string>
    <string name="permission_required">카카오톡 메시지 수신을 위해 알림 접근 권한이 필요합니다</string>
    <string name="btn_open_permission">권한 설정 열기</string>
    <string name="section_log">최근 릴레이 로그</string>
    <string name="log_empty">수신된 메시지가 없습니다</string>
    <string name="btn_clear_log">로그 지우기</string>
    <string name="toast_saved">서버 등록 완료!</string>
    <string name="toast_save_failed">연결 실패</string>
    <string name="toast_fill_fields">서버 주소와 유저 ID를 입력해주세요</string>
</resources>
